libiotrace/misc/fnres_todos.txt



- Release build currently broken (comment out CMakeLists.txt --> line 8):
    [ 19%] Building C object src/CMakeFiles/iotrace_static.dir/posix_io.c.o
    In file included from /usr/include/stdio.h:864,
                     from /mnt/hgfs/fpj/fsprj2/libiotrace/src/posix_io.c:11:
    /mnt/hgfs/fpj/fsprj2/libiotrace/src/posix_io.c:5362:13: error: expected identifier or ‘(’ before ‘__extension__’
     5362 | size_t WRAP(fwrite_unlocked)(const void *data, size_t size, size_t count,
          |             ^~~~~~~~~~~~~~~
    /mnt/hgfs/fpj/fsprj2/libiotrace/src/wrapper_defines.h:76:30: note: in expansion of macro ‘__WRAP’
         76 | #define WRAP(function_macro) __WRAP(function_macro)
          |                              ^~~~~~
    /mnt/hgfs/fpj/fsprj2/libiotrace/src/posix_io.c:5362:8: note: in expansion of macro ‘WRAP’
     5362 | size_t WRAP(fwrite_unlocked)(const void *data, size_t size, size_t count,
          |        ^~~~
    make[2]: *** [src/CMakeFiles/iotrace_static.dir/build.make:154: src/CMakeFiles/iotrace_static.dir/posix_io.c.o] Error 1
    make[1]: *** [CMakeFiles/Makefile2:388: src/CMakeFiles/iotrace_static.dir/all] Error 2
    make: *** [Makefile:163: all] Error 2





- `fork` -> module gets called twice
    <<libiotrace>> [DEBUG] In function fnres_trace_fctevent (file /mnt/hgfs/fpj/fsprj2/libiotrace/src/fnres/fctevent.c, line 114): CALLED W/ fork.
    <<libiotrace>> [DEBUG] In function fnres_trace_fctevent (file /mnt/hgfs/fpj/fsprj2/libiotrace/src/fnres/fctevent.c, line 313): Set for fctevent [fork] traced_filename: _ NOT-A-FILE _.
    <<libiotrace>> [DEBUG] In function fnres_trace_fctevent (file /mnt/hgfs/fpj/fsprj2/libiotrace/src/fnres/fctevent.c, line 114): CALLED W/ fork.
    <<libiotrace>> [DEBUG] In function fnres_trace_fctevent (file /mnt/hgfs/fpj/fsprj2/libiotrace/src/fnres/fctevent.c, line 313): Set for fctevent [fork] traced_filename: _ NOT-A-FILE _.

- ASK: event.c: `init_process` gets called for `fork` --> init_fmap ?


- `munmap` ?? -> _ NOT FOUND _

- MPI_Waitall cleanup not working properly ... !!


----


TODOs:
    mpi test
    test map





- `event.c`:
    - FNRES_MAX_FMAP_MAX_FNAMES ??


- CMakeLists.txt files (in src + test + test/cunit) --> target_link_options + target_compile_options ??
    -> tests -> remove -DWITH_FILENAME_RESOLUTION (libm won't be required anymore)
    	list(REMOVE_ITEM OPTIONS -DWITH_POSIX_IO)


- `logging.h`:
    - `<<libiotrace>>` lib wide logging output format




- Code-Review + Merge back